wrap behaviour fix

--- a/src/App.css
+++ b/src/App.css
@@ -113,12 +113,13 @@ li {
 .port-items-div {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
   padding: 1em;
 }
 
 .myImg {
-  width: 12em;
+  width: 16em;
   padding: 1%;
   margin: 2em;
   cursor: pointer;
